# dwind

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
.github/workflows/: .ci-tests.yml  .ci_docs.yml  pre-commit.yml  python-publish-test.yml  python-publish.yml
DWEFS Results/Baseline 2022/BTM/: DWEFS_outputs_BTM_agricultural.csv  DWEFS_outputs_BTM_all.csv  DWEFS_outputs_BTM_com_ind.csv  DWEFS_outputs_BTM_commercial_turbine_class.csv  DWEFS_outputs_BTM_disadvantaged.csv  DWEFS_outputs_BTM_large_turbine_class.csv  DWEFS_outputs_BTM_residential.csv  DWEFS_outputs_BTM_residential_turbine_class.csv
DWEFS Results/Baseline 2022/FOM/: DWEFS_outputs_FOM_agricultural.csv  DWEFS_outputs_FOM_all.csv  DWEFS_outputs_FOM_com_ind.csv  DWEFS_outputs_FOM_disadvantaged.csv  DWEFS_outputs_FOM_large_turbine_class.csv  DWEFS_outputs_FOM_residential.csv
DWEFS Results/Baseline 2035/BTM/: DWEFS_outputs_BTM_all.csv  DWEFS_outputs_BTM_commercial_turbine_class.csv  DWEFS_outputs_BTM_disadvantaged.csv  DWEFS_outputs_BTM_residential.csv  DWEFS_outputs_BTM_residential_turbine_class.csv
DWEFS Results/Baseline 2035/FOM/: DWEFS_outputs_FOM_agricultural.csv  DWEFS_outputs_FOM_all.csv  DWEFS_outputs_FOM_com_ind.csv  DWEFS_outputs_FOM_disadvantaged.csv  DWEFS_outputs_FOM_large_turbine_class.csv  DWEFS_outputs_FOM_residential.csv
DWEFS Results/Cost Performance/BTM/: DWEFS_outputs_BTM_agricultural.csv  DWEFS_outputs_BTM_all.csv  DWEFS_outputs_BTM_com_ind.csv  DWEFS_outputs_BTM_disadvantaged.csv  DWEFS_outputs_BTM_large_turbine_class.csv  DWEFS_outputs_BTM_residential.csv  DWEFS_outputs_BTM_residential_turbine_class.csv
DWEFS Results/Cost Performance/FOM/: DWEFS_outputs_FOM_agricultural.csv  DWEFS_outputs_FOM_all.csv  DWEFS_outputs_FOM_com_ind.csv  DWEFS_outputs_FOM_disadvantaged.csv  DWEFS_outputs_FOM_large_turbine_class.csv  DWEFS_outputs_FOM_residential.csv
DWEFS Results/Financing/BTM/: DWEFS_outputs_BTM_agricultural.csv  DWEFS_outputs_BTM_all.csv  DWEFS_outputs_BTM_com_ind.csv  DWEFS_outputs_BTM_commercial_turbine_class.csv  DWEFS_outputs_BTM_disadvantaged.csv  DWEFS_outputs_BTM_large_turbine_class.csv  DWEFS_outputs_BTM_residential.csv  DWEFS_outputs_BTM_residential_turbine_class.csv
DWEFS Results/Financing/FOM/: DWEFS_outputs_FOM_agricultural.csv  DWEFS_outputs_FOM_all.csv  DWEFS_outputs_FOM_com_ind.csv  DWEFS_outputs_FOM_disadvantaged.csv  DWEFS_outputs_FOM_large_turbine_class.csv  DWEFS_outputs_FOM_residential.csv
DWEFS Results/High DER Valuation/BTM/: DWEFS_outputs_BTM_all.csv  DWEFS_outputs_BTM_commercial_turbine_class.csv  DWEFS_outputs_BTM_disadvantaged.csv  DWEFS_outputs_BTM_residential.csv  DWEFS_outputs_BTM_residential_turbine_class.csv
dwind/: __init__.py  btm_sizing.py  config.py  helper.py  loader.py  model.py  mp.py  resource.py  run.py  scenarios.py  valuation.py
dwind/debug/: archive_dwind_config.py  btm.py  california.py  check_btm.py  compare_fom.py  dwfs.py  environment_old.yml  fom.py  load.py  run_model.py  test.py  urdb.py  validate_dev.ipynb
dwind/postprocess/: collect.py  compare_runs.py
dwind/preprocess/: 2025_scenario.py  collect_cntys.py  collect_counties.py  combine_agents.py  export.py  fix_consumption.sql  pgdump.txt
dwind_os/excel/: input_sheet_os_dwind.xlsx
dwind_os/input_agents/: .gitignore  agent_df_base_com_de.pkl  agent_df_base_res_co.pkl  agent_df_base_res_de.pkl
dwind_os/input_data/: observed_storage_deployment_by_state_sector_2020.csv
dwind_os/python/: .Rhistory  agents.py  config.py  data_functions.py  decorators.py  dg3n.yml  dgen_model.py  diffusion_functions_elec.py  financial_functions.py  input_data_functions.py  pg_params_atlas.json  settings.py  tariff_functions.py  tests.py  utility_functions.py
examples/: larimer_county_btm_baseline_2025.toml  model_config.toml
(+72 files in other folders)
